--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.1",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^8.45.0",
