--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Andrew Butler",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
